--- a/PH_Jules_1.7
+++ b/PH_Jules_1.7
@@ -71,7 +71,7 @@ const int BUTTON_DEBOUNCE_DELAY = 50; // Tempo em milissegundos para evitar leit
 const float PH_IDEAL_DEFAULT = 7.0;             // Valor padrão para o pH ideal
 const float PH_CONTROL_THRESHOLD = 0.3;         // Variação de pH que inicia uma checagem de controle
 const float PH_STABILITY_THRESHOLD = 0.1;       // Variação máxima entre médias para considerar a leitura estável
-const unsigned long PUMP_DURATION_MS = 1000;    // Duração que a bomba fica ligada (em milissegundos). 1000ms = 1s.
+const unsigned long PUMP_DURATION_MS_DEFAULT = 1000; // Duração padrão que a bomba fica ligada (1s)
 const unsigned long PUMP_COOLDOWN_MS = 300000;  // Tempo de espera (5 minutos) antes de acionar a bomba novamente
 
 // --- Configurações de Leitura e Calibragem ---
@@ -107,6 +107,7 @@ struct SystemConfig {
   float calibOffsetVoltage;     // Tensão de offset (valor lido em pH 7.0)
   float calibSlope;             // Inclinação da curva de pH (calculada na calibragem de 2 pontos)
   bool isCalibrated2Points;     // Flag para saber se a calibragem de 2 pontos foi feita
+  unsigned long pumpDurationMs; // Duração que a bomba fica ligada (em milissegundos)
 };
 
 SystemConfig config; // Variável global que conterá todas as configurações do sistema
@@ -131,6 +132,7 @@ enum SystemState {
   STATE_TECH_RAW_VALUES,
   STATE_TECH_CHECK_SENSORS,
   STATE_TECH_ACTIVATE_PUMP,
+  STATE_TECH_SET_PUMP_TIMER, // Novo estado para ajustar o tempo da bomba
   STATE_TECH_RESTART_CONFIRM
 };
 
@@ -171,6 +173,7 @@ bool btnMenuPressed = false, btnUpPressed = false, btnDownPressed = false;
 // Variáveis de controle de menu
 unsigned long lastActivityTime = 0;   // 'millis()' da última interação do usuário com o menu
 float tempPhIdeal;                    // Valor temporário ao ajustar o pH ideal
+unsigned long tempPumpDurationMs;     // Valor temporário ao ajustar o timer da bomba
 int menuCursor = 0;                   // Posição do cursor nos menus
 bool screenNeedsRedraw = true;        // Flag para controlar a atualização da tela e evitar flickering
 
@@ -340,6 +343,9 @@ void loop() {
       break;
       case STATE_TECH_ACTIVATE_PUMP:
         handleTechActivatePump();
+        break;
+    case STATE_TECH_SET_PUMP_TIMER:
+        handleSetPumpTimer();
         break;
     case STATE_TECH_RESTART_CONFIRM:
       handleTechRestartConfirm();
@@ -1101,12 +1107,13 @@ void handleTechMenu() {
         screenNeedsRedraw = true;
         return;
     }
+    const int numOptions = 6; // Agora são 6 opções no menu
     if (btnUpPressed) {
-        menuCursor = (menuCursor > 0) ? menuCursor - 1 : 4; // 5 opções (0-4)
+        menuCursor = (menuCursor > 0) ? menuCursor - 1 : numOptions - 1;
         screenNeedsRedraw = true;
     }
     if (btnDownPressed) {
-        menuCursor = (menuCursor < 4) ? menuCursor + 1 : 0; // 5 opções (0-4)
+        menuCursor = (menuCursor < numOptions - 1) ? menuCursor + 1 : 0;
         screenNeedsRedraw = true;
     }
 
@@ -1121,13 +1128,17 @@ void handleTechMenu() {
             case 2: // Ativar Bomba
                 currentState = STATE_TECH_ACTIVATE_PUMP;
                 break;
-            case 3: // Reiniciar
+            case 3: // Timer Bomba
+                currentState = STATE_TECH_SET_PUMP_TIMER;
+                // tempPumpDuration = config.pumpDurationMs; // Carrega valor para edição
+                break;
+            case 4: // Reiniciar
                 currentState = STATE_TECH_RESTART_CONFIRM;
                 menuCursor = 1; // Padrão em "NÃO"
                 break;
-            case 4: // Voltar
+            case 5: // Voltar
                 currentState = STATE_MAIN_MENU;
-                menuCursor = 2;
+                menuCursor = 2; // Volta para a opção "Menu Tecnico"
                 break;
         }
         screenNeedsRedraw = true;
@@ -1227,6 +1238,54 @@ void handleTechActivatePump() {
 }
 
 /**
+ * @brief Gerencia a tela de ajuste do timer da bomba.
+ */
+void handleSetPumpTimer() {
+    if (screenNeedsRedraw) {
+        // Ao entrar na tela, carrega o valor atual para a variável temporária
+        tempPumpDurationMs = config.pumpDurationMs;
+        displaySetPumpTimer();
+        screenNeedsRedraw = false;
+    }
+
+    // Timeout de inatividade
+    if (millis() - lastActivityTime > MENU_TIMEOUT_MS) {
+        currentState = STATE_TECH_MENU;
+        menuCursor = 3; // Volta para a opção "Timer Bomba"
+        screenNeedsRedraw = true;
+        return;
+    }
+
+    // Lógica dos botões
+    if (btnUpPressed) {
+        tempPumpDurationMs += 100; // Incrementa de 100 em 100 ms
+        screenNeedsRedraw = true;
+    }
+    if (btnDownPressed) {
+        if (tempPumpDurationMs >= 100) {
+            tempPumpDurationMs -= 100; // Decrementa de 100 em 100 ms
+        } else {
+            tempPumpDurationMs = 0;
+        }
+        screenNeedsRedraw = true;
+    }
+
+    // Limita o valor para não exceder um tempo razoável (ex: 30 segundos)
+    if (tempPumpDurationMs > 30000) {
+        tempPumpDurationMs = 30000;
+    }
+
+    if (btnMenuPressed) {
+        config.pumpDurationMs = tempPumpDurationMs;
+        saveConfigToEEPROM();
+        displaySuccessMessage("  TIMER SALVO!  ");
+        currentState = STATE_TECH_MENU;
+        menuCursor = 3;
+        screenNeedsRedraw = true;
+    }
+}
+
+/**
  * @brief Gerencia a confirmação de reinício do sistema.
  */
 void handleTechRestartConfirm() {
@@ -1318,10 +1377,33 @@ void checkPhAndControl() {
  * @brief Ativa a bomba de pH Down por um período definido.
  */
 void activatePump() {
+  // Exibe a mensagem inicial
   displayPumpActionScreen(true);
+
+  // Liga a bomba e mostra a barra de progresso
   digitalWrite(PIN_MOSFET_PUMP, HIGH); // LIGA a bomba (ativo em HIGH)
-  delay(PUMP_DURATION_MS); // Neste caso, um delay é aceitável pois é uma ação curta e crítica
+
+  // Simula uma barra de progresso que corresponde ao tempo de acionamento da bomba
+  lcd.setCursor(0, 2);
+  if (config.pumpDurationMs > 0) {
+      // Calcula o tempo de cada passo da barra de progresso
+      int stepDelay = config.pumpDurationMs / LCD_COLUMNS;
+      if (stepDelay > 0) { // Garante que não haja delay(0) em loop
+        for(int i=0; i<LCD_COLUMNS; i++){
+          lcd.print((char)255); // Caractere de bloco
+          delay(stepDelay);
+          wdt_reset(); // Reseta o watchdog durante o delay
+        }
+      } else {
+        // Se o tempo total for muito curto, apenas fazemos o delay total
+        delay(config.pumpDurationMs);
+        wdt_reset();
+      }
+  }
+
   digitalWrite(PIN_MOSFET_PUMP, LOW); // DESLIGA a bomba
+
+  // Exibe a mensagem de conclusão
   displayPumpActionScreen(false);
 
   isPumpOnCooldown = true;
@@ -1594,23 +1676,42 @@ void displayTechMenu() {
     lcd.clear();
     lcd.setCursor(0, 0);
     lcd.print(F("    MENU TECNICO    "));
-    const char* options[] = {"Valores Brutos", "Checar Sensores", "Ativar Bomba", "Reiniciar", "Voltar"};
-    const int numOptions = 5;
+    const char* options[] = {"Valores Brutos", "Checar Sensores", "Ativar Bomba", "Timer Bomba", "Reiniciar", "Voltar"};
+    const int numOptions = 6;
 
     // Lógica de rolagem para exibir 3 itens em uma tela com 1 linha de título
     int displayOffset = 0;
-    if (menuCursor > 2) {
-        displayOffset = menuCursor - 2;
+    if (menuCursor > 2) { // Se o cursor estiver além da terceira linha visível
+        displayOffset = menuCursor - 2; // Desloca a janela de visualização
     }
 
-    for (int i = 0; i < 3; i++) {
+    for (int i = 0; i < 3; i++) { // Exibe até 3 itens
         int optionIndex = i + displayOffset;
         if (optionIndex < numOptions) {
+            lcd.setCursor(1, i + 1);
+            // Limpa o resto da linha para evitar artefatos de rolagem
+            lcd.print("                   ");
             lcd.setCursor(1, i + 1);
             lcd.print(menuCursor == optionIndex ? ">" : " ");
             lcd.print(options[optionIndex]);
         }
     }
+}
+
+/**
+ * @brief Desenha a tela de ajuste do timer da bomba.
+ */
+void displaySetPumpTimer() {
+    lcd.clear();
+    lcd.setCursor(0, 0);
+    lcd.print(F("  AJUSTAR TIMER BOMBA  "));
+    lcd.setCursor(0, 2);
+    lcd.print(F("   Tempo: "));
+    // Converte de milissegundos para segundos para exibição
+    lcd.print((float)tempPumpDurationMs / 1000.0, 1);
+    lcd.print("s");
+    lcd.setCursor(0, 3);
+    lcd.print(F("MENU para Salvar"));
 }
 
 void displaySensorCheckScreen() {
@@ -1636,12 +1737,6 @@ void displayPumpActionScreen(bool isStarting) {
     lcd.setCursor(0, 1);
     if (isStarting) {
         lcd.print(F("   AJUSTANDO PH...  "));
-        // Simula uma barra de progresso
-        lcd.setCursor(0, 2);
-        for(int i=0; i<LCD_COLUMNS; i++){
-          lcd.print((char)255); // Caractere de bloco
-          delay(PUMP_DURATION_MS / LCD_COLUMNS);
-        }
     } else {
         lcd.print(F("  AJUSTE COMPLETO!  "));
         delay(2000); // Mostra a mensagem por 2 segundos
@@ -1674,9 +1769,16 @@ void saveConfigToEEPROM() {
 void loadConfigFromEEPROM() {
   int magic;
   EEPROM.get(EEPROM_ADDR_MAGIC, magic);
+  // Verifica o "número mágico" para ver se a EEPROM já foi inicializada.
   if (magic == EEPROM_MAGIC_VALUE) {
     // A EEPROM contém dados válidos, carrega-os
     EEPROM.get(EEPROM_ADDR_CONFIG, config);
+    // Verificação de segurança: se o pumpDuration não foi inicializado (comum ao atualizar de uma versão antiga),
+    // ele pode ter um valor lixo. Definimos um padrão se for o caso.
+    // Um valor muito grande ou zero seria um bom indicador.
+    if (config.pumpDurationMs == 0 || config.pumpDurationMs > 60000) { // Maior que 1 minuto é irreal
+        config.pumpDurationMs = PUMP_DURATION_MS_DEFAULT;
+    }
   } else {
     // EEPROM não inicializada ou dados corrompidos, usa valores padrão
     config.phIdeal = PH_IDEAL_DEFAULT;
@@ -1684,6 +1786,7 @@ void loadConfigFromEEPROM() {
     // Slope teórico em mV/pH a 25C. ADS1115 retorna V, então dividimos por 1000.
     config.calibSlope = -0.05916;
     config.isCalibrated2Points = false;
+    config.pumpDurationMs = PUMP_DURATION_MS_DEFAULT; // Define o padrão para o novo campo
     saveConfigToEEPROM(); // Salva os padrões para a próxima inicialização
   }
 }
