--- a/PH_Jules_1.7.3
+++ b/PH_Jules_1.7.3
@@ -173,6 +173,7 @@ bool btnMenuPressed = false, btnUpPressed = false, btnDownPressed = false;
 // Variáveis de controle de menu
 unsigned long lastActivityTime = 0;   // 'millis()' da última interação do usuário com o menu
 float tempPhIdeal;                    // Valor temporário ao ajustar o pH ideal
+unsigned long tempPumpDurationMs;     // Valor temporário ao ajustar o timer da bomba
 int menuCursor = 0;                   // Posição do cursor nos menus
 bool screenNeedsRedraw = true;        // Flag para controlar a atualização da tela e evitar flickering
 
@@ -326,6 +327,9 @@ void loop() {
       case STATE_TECH_ACTIVATE_PUMP:
         handleTechActivatePump();
         break;
+    case STATE_TECH_SET_PUMP_TIMER:
+      handleTechSetPumpTimer();
+      break;
     case STATE_TECH_RESTART_CONFIRM:
       handleTechRestartConfirm();
       break;
@@ -1078,11 +1082,11 @@ void handleTechMenu() {
         return;
     }
     if (btnUpPressed) {
-        menuCursor = (menuCursor > 0) ? menuCursor - 1 : 4; // 5 opções (0-4)
+        menuCursor = (menuCursor > 0) ? menuCursor - 1 : 5; // 6 opções (0-5)
         screenNeedsRedraw = true;
     }
     if (btnDownPressed) {
-        menuCursor = (menuCursor < 4) ? menuCursor + 1 : 0; // 5 opções (0-4)
+        menuCursor = (menuCursor < 5) ? menuCursor + 1 : 0; // 6 opções (0-5)
         screenNeedsRedraw = true;
     }
 
@@ -1097,13 +1101,17 @@ void handleTechMenu() {
             case 2: // Ativar Bomba
                 currentState = STATE_TECH_ACTIVATE_PUMP;
                 break;
-            case 3: // Reiniciar
+            case 3: // Timer Bomba
+                currentState = STATE_TECH_SET_PUMP_TIMER;
+                tempPumpDurationMs = config.pumpDurationMs; // Carrega o valor atual para edição
+                break;
+            case 4: // Reiniciar
                 currentState = STATE_TECH_RESTART_CONFIRM;
                 menuCursor = 1; // Padrão em "NÃO"
                 break;
-            case 4: // Voltar
+            case 5: // Voltar
                 currentState = STATE_MAIN_MENU;
-                menuCursor = 2;
+                menuCursor = 2; // Volta para a opção "Menu Tecnico" no menu anterior
                 break;
         }
         screenNeedsRedraw = true;
@@ -1203,6 +1211,48 @@ void handleTechActivatePump() {
 }
 
 /**
+ * @brief Gerencia a tela de ajuste do timer da bomba.
+ */
+void handleTechSetPumpTimer() {
+  if (screenNeedsRedraw) {
+    displayTechSetPumpTimer();
+    screenNeedsRedraw = false;
+  }
+
+  // Timeout de inatividade
+  if (millis() - lastActivityTime > MENU_TIMEOUT_MS) {
+    currentState = STATE_TECH_MENU; // Descarta alterações e volta
+    menuCursor = 3; // Volta para a opção "Timer Bomba"
+    screenNeedsRedraw = true;
+    return;
+  }
+
+  if (btnUpPressed) {
+    tempPumpDurationMs += 500; // Incrementa em 0.5s
+    screenNeedsRedraw = true;
+  }
+  if (btnDownPressed) {
+    tempPumpDurationMs -= 500; // Decrementa em 0.5s
+    screenNeedsRedraw = true;
+  }
+
+  // Limita o valor entre 0.5s (500ms) e 10.0s (10000ms)
+  // A verificação > 10000 previne o "wrap-around" de um unsigned long ao subtrair abaixo de 500.
+  if (tempPumpDurationMs < 500 || tempPumpDurationMs > 10000) {
+    tempPumpDurationMs = 500;
+  }
+
+  if (btnMenuPressed) {
+    config.pumpDurationMs = tempPumpDurationMs;
+    saveConfigToEEPROM();
+    displaySuccessMessage(F("  TIMER SALVO!  "));
+    currentState = STATE_TECH_MENU;
+    menuCursor = 3; // Volta para a opção "Timer Bomba"
+    screenNeedsRedraw = true;
+  }
+}
+
+/**
  * @brief Gerencia a confirmação de reinício do sistema.
  */
 void handleTechRestartConfirm() {
@@ -1227,7 +1277,7 @@ void handleTechRestartConfirm() {
         } else { // NÃO
             currentState = STATE_TECH_MENU;
             screenNeedsRedraw = true;
-            menuCursor = 3; // Corrected to point to "Reiniciar"
+            menuCursor = 4; // Corrigido para apontar para "Reiniciar"
         }
     }
 }
@@ -1296,7 +1346,8 @@ void checkPhAndControl() {
 void activatePump() {
   displayPumpActionScreen(true);
   digitalWrite(PIN_MOSFET_PUMP, HIGH); // LIGA a bomba (ativo em HIGH)
-  delay(PUMP_DURATION_MS); // Neste caso, um delay é aceitável pois é uma ação curta e crítica
+  // Usa o valor de duração da bomba que foi configurado pelo usuário e salvo na EEPROM.
+  delay(config.pumpDurationMs); // Neste caso, um delay é aceitável pois é uma ação curta e crítica
   digitalWrite(PIN_MOSFET_PUMP, LOW); // DESLIGA a bomba
   displayPumpActionScreen(false);
 
@@ -1570,8 +1621,8 @@ void displayTechMenu() {
     lcd.clear();
     lcd.setCursor(0, 0);
     lcd.print(F("    MENU TECNICO    "));
-    const char* options[] = {"Valores Brutos", "Checar Sensores", "Ativar Bomba", "Reiniciar", "Voltar"};
-    const int numOptions = 5;
+    const char* options[] = {"Valores Brutos", "Checar Sensores", "Ativar Bomba", "Timer Bomba", "Reiniciar", "Voltar"};
+    const int numOptions = 6;
 
     // Lógica de rolagem para exibir 3 itens em uma tela com 1 linha de título
     int displayOffset = 0;
@@ -1607,6 +1658,19 @@ void displayRestartConfirm() {
     lcd.print(menuCursor == 1 ? ">NAO" : " NAO");
 }
 
+void displayTechSetPumpTimer() {
+  lcd.clear();
+  lcd.setCursor(0, 0);
+  lcd.print(F(" AJUSTAR TIMER BOMBA"));
+  lcd.setCursor(0, 2);
+  // Exibe o valor em segundos, dividindo os milissegundos por 1000.
+  lcd.print(F("  Tempo: "));
+  lcd.print(tempPumpDurationMs / 1000.0, 1);
+  lcd.print(F("s"));
+  lcd.setCursor(0, 3);
+  lcd.print(F("Press. MENU p/salvar"));
+}
+
 void displayPumpActionScreen(bool isStarting) {
     lcd.clear();
     lcd.setCursor(0, 1);
@@ -1616,7 +1680,8 @@ void displayPumpActionScreen(bool isStarting) {
         lcd.setCursor(0, 2);
         for(int i=0; i<LCD_COLUMNS; i++){
           lcd.print((char)255); // Caractere de bloco
-          delay(PUMP_DURATION_MS / LCD_COLUMNS);
+          // A barra de progresso deve refletir a duração real da bomba, que está em config.pumpDurationMs.
+          delay(config.pumpDurationMs / LCD_COLUMNS);
         }
     } else {
         lcd.print(F("  AJUSTE COMPLETO!  "));
